test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_30.k
id = 1

rule str:
    id > 0
